--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,5 @@
-.container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100vw;
-    height: 100vh;
+body{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
